<resources>
    <string name="app_name">Kukdu Delivery</string>
    <string name="facebook_app_id">267611210786273</string>
    <string name="fb_login_protocol_scheme">fb267611210786273</string>
    <string name="help_amp_support"><![CDATA[HELP & SUPPORT]]></string>
    <string name="login_here">Login Here</string>
    <string name="delivery_slot">Delivery Slot</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="delivered_date">Delivered Date</string>
    <string name="order_date">Order Date</string>
    <string name="search">Search</string>
    <string name="pick_order">PICK ORDER</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="ok">OK</string>
    <string name="help">HELP</string>
    <string name="select_date">Select Date</string>
    <string name="clear">Clear</string>
    <string name="total_cash_in_hand">Total cash in hand</string>
    <string name="pay_now">Pay Now</string>
    <string name="cash_in_hand">Cash In-hand</string>
    <string name="cod_amount">COD Amount</string>
    <string name="todays_earning">Today\'s Earning</string>
    <string name="weekly_earning">Weekly Earning</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="assigned_order">Assigned Order</string>
    <string name="cod_orders">COD Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="date">Date</string>
    <string name="earning">Earning</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment">Payment</string>
    <string name="razor_pay">Razor Pay</string>
    <string name="g_pay">G-Pay</string>
    <string name="paytm">Paytm</string>
    <string name="special_comments">Special Comments</string>
    <string name="go">Go</string>
    <string name="search_by_order_no">Search By Order No.</string>
    <string name="click_here_to_show_documents"><b><u>Click here to show documents</u></b></string>
</resources>
