<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <com.kukdudelivery.util.TTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/height_10"
        android:text="welcome"
        android:textColor="#535353"
        android:textSize="@dimen/font_size_thirteen" />

    <com.kukdudelivery.util.TTextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/height_10"
        android:layout_marginEnd="@dimen/height_10"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="#D82B2F"
        android:textSize="@dimen/font_size_thirteen"
        android:textStyle="italic" />

    <com.kukdudelivery.util.TTextView
        android:id="@+id/noorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@id/tvUserName"
        android:gravity="center"
        android:text="Coming Soon..."
        android:textColor="@color/Order_no"
        android:textSize="@dimen/font_size_sixteen"
        android:textStyle="italic"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@id/tvUserName"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@color/red_theme_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    style="@style/regular_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/assigned_order"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_assigned_order"
                    style="@style/medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16ssp"
                    tools:text="07" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@color/red_theme_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    style="@style/regular_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/delivered_order"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_delivered_order"
                    style="@style/medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16ssp"
                    tools:text="03" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/header_underline"
            android:visibility="gone" />

        <TextView
            style="@style/medium_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="Orders Filter"
            android:textColor="#555555" />

        <Spinner
            android:id="@+id/spDateFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/spinner_back_border"
            android:gravity="center"
            android:overlapAnchor="false"
            android:text=""
            android:textSize="@dimen/_10ssp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/llOrderData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/medium_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/cod_orders"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11ssp"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_cod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:scrollbars="none"
                    android:visibility="gone"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                <TextView
                    style="@style/medium_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/past_orders"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11ssp" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_semi"
                        android:includeFontPadding="false"
                        android:text="@string/date"
                        android:textColor="@color/field_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toStartOf="@+id/txtOrderCount"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtOrderCount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_semi"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="Count"
                        android:textColor="@color/field_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toStartOf="@+id/txtAmount"
                        app:layout_constraintStart_toEndOf="@+id/txtDate"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_semi"
                        android:gravity="end"
                        android:includeFontPadding="false"
                        android:text="@string/earning"
                        android:textColor="@color/field_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/txtOrderCount"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_past"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:scrollbars="none"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <View
            android:id="@+id/bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/header_underline"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llCod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red_theme_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    style="@style/regular_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/cod_amount"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/txt_cod_amount"
                    style="@style/medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:text="12.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/red_theme_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    style="@style/regular_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/todays_earning"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/txt_todays_earning"
                    style="@style/medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:text="12.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red_theme_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    style="@style/regular_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/weekly_earning"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/txt_weekly_earning"
                    style="@style/medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:text="12.00" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/bottom_menu"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-30dp"
        android:scaleType="fitXY"
        android:src="@drawable/round_logo"
        android:translationZ="10dp" />

    <include
        android:id="@+id/bottom_menu"
        layout="@layout/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>